# JapaneseThesis

./: .gitignore  API.py  Analysis-20.xlsx  BCCWJ1313.xlsx  Mecab_Analysis.py  Pre_V_Analysis.py  Pre_V_AnalysisV2.py  Pre_V_withV_analysis.py  README.md  dictionary_with_class.py  draw_freq.py  knp_analysis.py  main.py  parse_excel.py  prompts.py  pyproject.toml  shifting_wordcloud.py  utils_cls_parse.py
data_cls/: KOUMOKU.txt  SAKUIN.txt  export_res.json
data_new/: 5-BCCWJ1313.xlsx  5-CHJ376.xlsx  5-SHC508.xlsx
data_old/: Analysis-20.xlsx  Analysis-3.xlsx  BCCWJ1313--2.xlsx  BCCWJ1313.xlsx  CHJ376--2.xlsx  CHJ376.xlsx  Jp-Ch-Translation-20.xlsx  Jp-Ch-Translation-508.xlsx  SHC508--2.xlsx  SHC508.xlsx  Translation-BCCWJ-1313.xlsx  Translation-CHJ-376.xlsx
