[project]
name = "japanesethesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "matplotlib>=3.10.7",
    "openai>=2.7.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyknp>=0.6.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]
